src/components/FiltersBar2/filtersBar2.module.scss
@import "@/sass/abstracts/variables.scss";
@import "@/sass/abstracts/mixins.scss";

.container {
  display: flex;
  align-items: flex-start;
  gap: 1rem;

  position: fixed;
  top: 0;
  //left: 12.5%;
  transform: translateY(-100%);
  z-index: 3;

  margin-top: auto;
  padding: 2rem 6rem 3rem;
  width: 100%;

  border-bottom-left-radius: 20%;
  border-bottom-right-radius: 20%;
  box-shadow: inset 0rem 0rem 0.4rem 1.44rem rgba(255, 255, 255, 0.3),
    inset 0rem 0rem 0.4rem 0.4rem rgba(255, 255, 255, 0.7);
  background-color: #999999;

  transition: $default-transition, z-index 0.5s 0.5s;

  @include responsiveDesign(1000) {
    flex-direction: column;
    border-bottom-left-radius: 10%;
    border-bottom-right-radius: 10%;
  }
}

.showFiltersBar {
  transform: translateY(0%);
}

.toolsFoundAndSearchWrapper {
  display: flex;
  flex-direction: column;
  gap: 5rem;

  @include responsiveDesign(1000) {
    flex-direction: row;

    & .toolsFound {
      align-self: center;
    }
  }
}

.toolsFound {
  font-size: 2rem;
  margin-left: auto;

  & .toolsFoundSpan {
    text-decoration: underline;
  }
}

.titleFieldset,
.tagFieldset {
  padding: 1rem;
}

.tagFieldset {
  display: flex;
  gap: 1.5rem;

  width: 100%;
  max-height: 18.8rem;

  & .tagsContainer {
    display: flex;
    align-items: flex-start;
    align-content: flex-start;
    flex-wrap: wrap;
    gap: 0.5rem;

    height: 15rem;
    width: 100%;
    overflow: auto;
  }

  &:nth-of-type(3) {
    border-bottom-right-radius: 20%;
  }
}

.titleLegend,
.tagLegend {
  font-size: 1.3rem;
}

.searchInput {
  padding: 0.5rem;
  border-radius: 1rem;
  width: 30rem;
}

.selectInput {
  border-radius: 1rem;
  width: 20rem;
  height: 15rem;
  padding: 0.5rem;
  transition: $quick-transition;

  &:hover {
    height: 90vh;
  }
}

//////////////////////////////////
// SEARCH BY TEXT

.searchRadioButtons {
  display: flex;
  margin: 0.5rem 0.5rem 0;
  justify-content: flex-end;
  align-items: center;
  gap: 1.5rem;
}

.radioButton {
  display: flex;
  align-items: center;
  gap: 0.3rem;
  font-family: $texts-fonts;
  font-size: 1.2rem;
}

//////////////////////////////////
// ACTIVATION FILTERS PANEL BUTTON

.FiltersPanelButton {
  background-color: red;
  border-radius: 0 0 1rem 1rem;
  border: none;
  bottom: -15%;
  color: white;
  cursor: pointer;
  display: block;
  font-family: $titles-fonts;
  font-size: 1.6rem;
  left: 50%;
  padding: 0.8rem;
  position: absolute;
  transform: translateX(-50%);
  z-index: 2;
}

